layout bugs fixing

--- a/src/components/Landing/GovPortal/CouncilBlock/council.module.scss
+++ b/src/components/Landing/GovPortal/CouncilBlock/council.module.scss
@@ -49,11 +49,12 @@
       column-gap: 32px;
     }
     @media screen and (min-width: 768px) and (max-width: 1023px) {
-      margin: 56px 0 64px;
+      margin: 48px 0 64px;
       row-gap: 24px;
       column-gap: 8px;
     }
     @media screen and (max-width: 767px) {
+      margin: 48px 0 56px;
       row-gap: 24px;
       column-gap: 8px;
     }
