--- a/src/components/Landing/GovPortal/HeroSection/hero.module.scss
+++ b/src/components/Landing/GovPortal/HeroSection/hero.module.scss
@@ -16,6 +16,10 @@
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     gap: 16px;
   }
+  @media screen and (max-width: 767px) {
+    height: auto;
+    padding: 140px 0 110px;
+  }
 
   h1 {
     width: 100%;
